[tool.poetry]
name = "generat"
version = "0.1.0"
description = ""
authors = ["YUASDS <1787569211@qq.com>"]

[tool.poetry.dependencies]
python = "^3.9"
black = "^22.3.0"
pygame = "^2.1.2"
loguru = "^0.6.0"
numpy = "^1.22.3"
pandas = "^1.4.2"
pydub = "^0.25.1"
ffmpeg-python = "^0.2.0"
openpyxl = "^3.0.9"
pillow = "^9.1.0"

[tool.poetry.dev-dependencies]
CrFinder = "^0.4.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]] 
name = "custom" 
url = "https://pypi.tuna.tsinghua.edu.cn/simple" 
default = true
